src/core/scss/zadark-znotification.scss
:root {
  --text-primary: #001a33;
  --text-secondary: #767676;

  --N20: #eaedf0;
}

html[data-zadark-theme="dark"] {
  &:root {
    --text-primary: #e5e5e5;
    --text-secondary: #9e9f9f;

    --NG30: #3d3f40;
    --WA100: #232526;

    --B15: #0f2345;
    --B55: #0068ff;

    --N20: #353637;
    --N25: #353637;
    --N40: #696b6b;
  }

  .zadark {
    font-family: "Open Sans", sans-serif;

    #zbg {
      border: 1px solid var(--NG30);
      background-color: var(--WA100);
    }

    #zbody {
      font-family: "Open Sans", sans-serif;
      color: var(--text-secondary);
    }

    #ztitle {
      font-family: "Open Sans", sans-serif;
    }

    #zname {
      color: var(--text-primary);
    }

    #znbutton-left {
      border: 1px solid var(--B15);
      background: var(--B15);
      color: var(--B55);
    }

    #znbutton-right {
      border: 1px solid var(--N25);
      background: var(--N25);
      color: var(--text-primary);
    }

    #closebtn {
      color: var(--N40);
    }
  }
}

// .zadark {
//   #zbg,
//   #zbody,
//   #title,
//   #zavatar {
//     transition: all 100ms ease-in-out;
//   }

//   &.zadark-prv--latest-message {
//     #zbody {
//       position: relative;
//       color: transparent !important;

//       &::after {
//         content: "••••••";
//         position: absolute;
//         top: 0;
//         left: 0;

//         width: 100%;
//         height: 100%;
//         display: flex;
//         align-items: center;

//         color: var(--text-secondary);
//         font-size: 16px;
//         letter-spacing: 1px;
//         opacity: 1;
//       }
//     }
//   }

//   &.zadark-prv--conv-avatar {
//     #zavatar {
//       position: relative;
//       background: var(--N20) !important;

//       display: flex;
//       align-items: center;
//       justify-content: center;
//       font-size: 1.25rem;

//       &::after {
//         content: "\e901";
//         color: var(--text-secondary);
//         font-family: "ZaDarkIcons";
//       }
//     }
//   }

//   &.zadark-prv--conv-name {
//     #ztitle {
//       position: relative;
//       color: transparent !important;

//       * {
//         opacity: 0;
//       }

//       &::after {
//         content: "••••••";
//         position: absolute;
//         top: 0;
//         left: 0;

//         width: 100%;
//         height: 100%;
//         display: flex;
//         align-items: center;

//         color: var(--text-primary);
//         font-size: 16px;
//         letter-spacing: 1px;
//         opacity: 1;
//       }
//     }
//   }
// }

